@@ -1,3 +1,9 @@
+2012-09-09 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>
+
+	* src/z80/gen.c,
+	  support/regression/tests/bug3559997.c:
+	  Fixed bug #3559997.
+
 2012-09-09 Erik Petrich <epetrich AT ivorytower.norman.ok.us>
 
 	* src/SDCCsymt.c (checkSClass),
